infra/k8s/dev/08-frontend/ingress-frontend-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
  - host: frontend-dev.hadi-polyai.fursa.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
